--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-validator": "^5.3.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.4.0",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "mysql": "^2.16.0"
